# aiogram_and_fast_api_template

./: .env.dist  .gitignore  app.py  pyproject.toml
src/: config.py
src/tgbot/handlers/: start.py
